--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 
     <div id="divElemento">
 
-        <h1 v-model="message">{{ message }}</h1>
+        <h1> {{ message }} </h1>
+
+        <img v-bind:src="img" alt="">
+
+        <p> {{ messagedue }}</p>
 
 
     </div>
