--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
         <img v-bind:src="img" alt="">
 
-        <p> {{ messagedue }}</p>
+        <p v-bind:class = "className"> {{ messagedue }}  </p>
+
+        
 
 
     </div>
